[FIX] Improve TouchCursor UX: center-aligned crosshair #1155

--- a/src/interaction/TouchCursor.css
+++ b/src/interaction/TouchCursor.css
@@ -18,7 +18,21 @@
   left: 0;
   width: 50%;
   height: 50%;
-  background: radial-gradient(circle at 100% 100%, transparent, transparent 70%, #369 70%, #369)
+  background: radial-gradient(circle at 100% 100%, transparent, transparent 70%, #369 70%, #369);
+  transform-origin: 100% 100%;
+}
+.ol-overlaycontainer .ol-touch-cursor-center {
+  margin-top: 16px;
+  margin-left: -28px;
+}
+.ol-overlaycontainer .ol-touch-cursor-center:after {
+  transform: rotate(45deg);
+}
+.ol-overlaycontainer .ol-touch-cursor-right {
+  margin-left: -62px;
+}
+.ol-overlaycontainer .ol-touch-cursor-right:after {
+  transform: rotate(90deg);
 }
 
 .ol-overlaycontainer .ol-touch-cursor .ol-button {
